--- a/package.json
+++ b/package.json
@@ -19,16 +19,18 @@
   ],
   "scripts": {
     "build": "ember build --environment=production",
-    "lint": "concurrently \"npm:lint:*(!fix)\" --names \"lint:\"",
+    "format": "prettier . --cache --write",
+    "lint": "concurrently \"npm:lint:*(!fix)\" --names \"lint:\" --prefixColors auto",
     "lint:css": "stylelint \"**/*.css\"",
     "lint:css:fix": "concurrently \"npm:lint:css -- --fix\"",
-    "lint:fix": "concurrently \"npm:lint:*:fix\" --names \"fix:\"",
+    "lint:fix": "concurrently \"npm:lint:*:fix\" --names \"fix:\" --prefixColors auto && npm run format",
+    "lint:format": "prettier . --cache --check",
     "lint:hbs": "ember-template-lint .",
     "lint:hbs:fix": "ember-template-lint . --fix",
     "lint:js": "eslint . --cache",
     "lint:js:fix": "eslint . --fix",
     "start": "ember serve",
-    "test": "concurrently \"npm:lint\" \"npm:test:*\" --names \"lint,test:\"",
+    "test": "concurrently \"npm:lint\" \"npm:test:*\" --names \"lint,test:\" --prefixColors auto",
     "test:ember": "ember test",
     "test:node": "mocha node-tests/*",
     "prepublishOnly": "rm -rf dist && npm run build"
@@ -40,71 +42,73 @@
     "temporal-polyfill": "^0.2.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@babel/eslint-parser": "^7.25.1",
-    "@babel/plugin-proposal-decorators": "^7.24.7",
-    "@ember/optional-features": "^2.1.0",
+    "@babel/core": "^7.28.4",
+    "@babel/eslint-parser": "^7.28.4",
+    "@babel/plugin-proposal-decorators": "^7.28.0",
+    "@ember/optional-features": "^2.2.0",
     "@ember/render-modifiers": "^2.1.0",
-    "@ember/string": "^3.1.1",
-    "@ember/test-helpers": "^3.3.1",
-    "@glimmer/component": "^1.1.2",
+    "@ember/test-helpers": "^5.2.2",
+    "@embroider/macros": "^1.18.1",
+    "@eslint/js": "^9.35.0",
+    "@glimmer/component": "^2.0.0",
     "@glimmer/tracking": "^1.1.2",
     "broccoli-asset-rev": "^3.0.0",
     "chai": "^4.3.6",
     "cheerio": "^1.0.0-rc.12",
-    "concurrently": "^8.2.2",
-    "ember-auto-import": "^2.7.4",
+    "concurrently": "^9.2.1",
+    "ember-auto-import": "^2.10.0",
     "ember-body-class": "^3.0.0",
-    "ember-cli": "~5.11.0",
-    "ember-cli-app-version": "^6.0.1",
+    "ember-cli": "~6.7.2",
+    "ember-cli-app-version": "^7.0.0",
     "ember-cli-babel": "^8.2.0",
     "ember-cli-clean-css": "^3.0.0",
-    "ember-cli-dependency-checker": "^3.3.2",
+    "ember-cli-dependency-checker": "^3.3.3",
+    "ember-cli-deprecation-workflow": "^3.4.0",
     "ember-cli-htmlbars": "^6.3.0",
     "ember-cli-inject-live-reload": "^2.1.0",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.2",
-    "ember-data": "~5.3.8",
-    "ember-fetch": "^8.1.2",
+    "ember-data": "~5.6.0",
     "ember-inflector": "^5.0.1",
-    "ember-load-initializers": "^2.1.2",
-    "ember-modifier": "^4.2.0",
-    "ember-page-title": "^8.2.3",
-    "ember-qunit": "^8.1.0",
-    "ember-resolver": "^11.0.1",
-    "ember-source": "~5.11.0",
-    "ember-template-lint": "^5.13.0",
+    "ember-load-initializers": "^3.0.1",
+    "ember-modifier": "^4.2.2",
+    "ember-page-title": "^9.0.3",
+    "ember-qunit": "^9.0.3",
+    "ember-resolver": "^13.1.1",
+    "ember-source": "~6.7.0",
+    "ember-template-imports": "^4.3.0",
+    "ember-template-lint": "^6.1.0",
     "ember-test-selectors": "^7.0.0",
     "ember-welcome-page": "^7.0.2",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-ember": "^11.12.0",
-    "eslint-plugin-n": "^16.6.2",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-qunit": "^8.1.1",
+    "eslint": "^9.35.0",
+    "eslint-config-prettier": "^9.1.2",
+    "eslint-plugin-ember": "^12.7.3",
+    "eslint-plugin-n": "^17.21.3",
+    "eslint-plugin-qunit": "^8.2.5",
     "execa": "^7.0.0",
     "express": "^4.17.1",
     "fixturify-project": "^7.1.3",
     "frappe-charts": "^1.5.2",
     "glob": "^4.5.3",
+    "globals": "^15.15.0",
     "lint-to-the-future-eslint": "^2.0.1",
     "loader.js": "^4.7.0",
     "mocha": "^10.1.0",
     "morgan": "^1.10.0",
-    "prettier": "^3.3.3",
-    "qunit": "^2.22.0",
-    "qunit-dom": "^2.0.0",
+    "prettier": "^3.6.2",
+    "prettier-plugin-ember-template-tag": "^2.1.0",
+    "qunit": "^2.24.1",
+    "qunit-dom": "^3.5.0",
     "release-plan": "^0.9.0",
-    "stylelint": "^15.11.0",
-    "stylelint-config-standard": "^34.0.0",
-    "stylelint-prettier": "^4.1.0",
+    "stylelint": "^16.23.1",
+    "stylelint-config-standard": "^36.0.1",
     "temp": "^0.9.4",
-    "tracked-built-ins": "^3.3.0",
-    "webpack": "^5.93.0"
+    "tracked-built-ins": "^3.4.0",
+    "webpack": "^5.101.3"
   },
   "packageManager": "pnpm@7.33.7+sha512.7afe2410642b39c698df46da4ce5c7231a5cce360698d69f8cf8f42257d40b3e43f231053b07b8de849fd4ffbf4a71ff57b835137777a352388f3d3da747200e",
   "engines": {
-    "node": ">= 18"
+    "node": ">= 20.11"
   },
   "pnpm": {
     "overrides": {
