drop support for node < 20

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,13 +43,17 @@ jobs:
   node-tests:
     name: BackendTests
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [ 20, 22, 24 ]
+
 
     steps:
       - uses: actions/checkout@v4
       - uses: pnpm/action-setup@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 14.x
+          node-version: ${{ matrix.node-version }}
           cache: pnpm
       - run: pnpm i --frozen-lockfile
       - run: pnpm npm run prepublishOnly # make sure the dashboard is built before testing
