--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: pnpm/action-setup@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 18.x
+          node-version: 24
           cache: pnpm
       - run: pnpm i --frozen-lockfile
       - run: pnpm run lint
@@ -35,7 +35,7 @@ jobs:
       - uses: pnpm/action-setup@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 14.x
+          node-version: 24
           cache: pnpm
       - run: pnpm i --frozen-lockfile
       - run: pnpm run test:ember
